# mailing_service_project

./: README.md  pyproject.toml  schedule_running.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: detail_article.html
config/: settings.py  urls.py
custom_user/: admin.py  forms.py  models.py  urls.py  views.py
custom_user/management/commands/: create_su.py
custom_user/migrations/: 0001_initial.py
custom_user/templates/custom_user/: log_in.html  log_out.html  reg_notification.html  success_verify.html  user_registration.html
mailing_service/: admin.py  forms.py  schedule_script.py  urls.py
mailing_service/management/commands/: run_mailing.py
mailing_service/migrations/: 0001_initial.py  0002_alter_customers_options_and_more.py  0002_alter_mailingsettings_send_time_and_more.py  0002_alter_messageslogs_server_response.py
mailing_service/models/: __init__.py  customers.py  logs.py  mailing_settings.py  sending_message.py
mailing_service/templates/: base.html  index.html
mailing_service/templates/includes/: navbar.html  style_settings.html
mailing_service/templates/mailing_service/: customer_creating.html  customer_delete.html  customers_table.html  mail_settings_create.html  mail_settings_delete.html  mail_settings_detail.html  mail_settings_table.html  mailing_menu.html  message_logs.html
mailing_service/templatetags/: blog_tags.py
mailing_service/views/: __init__.py  customer_views.py  log_views.py  mailing_settings_views.py
